--- a/march-update/index.html
+++ b/march-update/index.html
@@ -20,7 +20,7 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-            <link rel="stylesheet" href="css/font-awesome.css">
+        <link rel="stylesheet" href="css/font-awesome.css">
         <link rel="stylesheet" href="css/font-awesome.min.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
@@ -31,15 +31,14 @@
 
         <!-- Add your site or application content here -->
     <div class="wrapper">
-        <header>
-            <figure>
-                <img src=""/>
+        <header class="page-header">
+            <figure class="logo">
+                <img src="img/logo.svg"/>
             </figure>
             <figure>
-                <i></i>
+                <i class="fa fa-angle-double-down fa-3x"></i>
             </figure>
         </header>
-
         <section class="hero">
             <div class="hero-copy-wrapper">
                 <div class="hero-copy">
@@ -71,10 +70,10 @@
                 </div>
 
                 <div class="links">
-                    <p class="links-copy">Read <span class="links-bold">'My Story'.</span></p>
-                    <p class="links-copy">Check out what <span class="links-bold">I've worked on.</span></p>
-                    <p class="links-copy">Read <span class="links-bold">the archives.</span></p>
-                    <p class="links-copy">Or <span class="links-bold">get in touch.</span></p>
+                    <p>Read <a href="about/about.html">'My Story'.</a></p>
+                    <p>Check out what <a href="">I've worked on.</a></p>
+                    <p>Read <a href="">the archives.</a></p>
+                    <p>Or <a href="mailto:aleia@aleiawalker.com?Subject=Love%20your%20site!%20Let's%20talk.%20" target="_blank">get in touch.</a></p>
                 </div>
             </div>
         </section>
