--- a/march-update/about/sub-folders/about-aleia.html
+++ b/march-update/about/sub-folders/about-aleia.html
@@ -7,25 +7,39 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="apple-touch-icon" href="../apple-touch-icon.png">
+        <link rel="stylesheet" type="text/css" href="fonts/MyFontsWebfontsKit/MyFontsWebfontsKit.css">
+        <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Playfair+Display:400,700' rel='stylesheet' type='text/css'>
+
         <!-- Place favicon.ico in the root directory -->
-        <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Montserrat:400,700|Roboto+Condensed:400,300' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="../css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <link rel="icon" href="../../favicon.ico">
+
+        <link rel="stylesheet" href="../../css/normalize.css">
+        <link rel="stylesheet" href="../../css/main.css">
+        <link rel="stylesheet" href="../../css/font-awesome.css">
+        <link rel="stylesheet" href="../../css/font-awesome.min.css">
+        <script src="../../js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
-    <body class="main">
+    <body class="about-aleia-subpage">
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
-	<section class="container">
+    <div class="wrapper">
+        <header class="page-header">
+            <figure class="logo">
+                <img src="../../img/logo.svg"/>
+            </figure>
+            <figure>
+                <i class="fa fa-angle-double-down fa-3x"></i>
+            </figure>
+        </header>
+	<section class="subpage-container">
 		<div class="about-me-copy">
-	        <header class="intro">
-	        	Hi, I'm Aleia
+	        <header class="aleia-intro">
+	        	Hi again, I'm Aleia
 	        </header>
 	        <div class="spacer-a"></div>
-	        <p class="tagline">
+	        <p class="aleia-tagline">
 	        	A self-taught frontend developer + designer with a passion for mobile-first responsive design, minimalism, and user experience.
 	        </p>
 	        <div class="spacer-a"></div>
@@ -49,15 +63,48 @@
 
 			<aside class="likes-container">
 				<p class="likes-para">
-					You can find me...<span class="likes">reading books about design and development.</span><span class="likes">trying new restaurants.</span><span class="likes">writing things about design, development, and getting started in the tech industry.</span><span class="likes">finding tea shops.</span><span class="likes">building mastermind groups for individuals looking to make things happen.</span><span class="likes">reggae + dancehall musics.</span><span class="likes">finding size 6 wide calf boots.</span><span class="likes">living in walkable cities.</span>
+					You can find me... <span class="likes">reading books about design and development. </span><span class="likes">trying new restaurants. </span><span class="likes">writing things about design, development, and getting started in the tech industry. </span><span class="likes">finding tea shops. </span><span class="likes">building mastermind groups for individuals looking to make things happen. </span><span class="likes">reggae + dancehall musics. </span><span class="likes">finding size 6 wide calf boots. </span><span class="likes">living in walkable cities.</span>
 				</p>
 			</aside> 
 
 			<div class="home">
-		        <p><a href="../index.html">Back</a></p>
+		        <p class="aleia-link"><a href="aleia-dev">to Aleia + Dev</a></p>
 		    </div>
 		</div>
-			</section>
+		</section>
+		<footer>
+            <div class="footer-copy">
+                <p class="hairline footer-tag">Aleia elsewhere on the web</p>
+                <ul class="social">
+                    <li>
+                        <a href="http://twitter.com/msaleia">
+                            <i class="fa fa-twitter fa-lg" alt="twitter icon"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://github.com/msaleia">
+                            <i class="fa fa-github-alt fa-lg" alt="GitHub icon"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://linkedin.com/in/aleiawalker">
+                            <i class="fa fa-linkedin fa-lg" alt="linkedin icon"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://behance.net/aleiawalker">
+                            <i class="fa fa-behance fa-lg" alt="Behance icon"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="mailto:aleia@aleiawalker.com">
+                            <i class="fa fa-envelope fa-lg" alt="email icon"></i>
+                        </a>
+                    </li>
+                </ul>
+            </footer>
+		</div>
+
 
 	<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
