completed about aleia subpage

--- a/march-update/about/sub-folders/about-aleia.html
+++ b/march-update/about/sub-folders/about-aleia.html
@@ -68,7 +68,7 @@
 			</aside> 
 
 			<div class="home">
-		        <p class="aleia-link"><a href="aleia-dev">to Aleia + Dev</a></p>
+		        <p class="aleia-link"><a href="aleia-dev.html">to Aleia + Dev</a></p>
 		    </div>
 		</div>
 		</section>
