completed up to mobile version of packages layout

--- a/march-update/about/about.html
+++ b/march-update/about/about.html
@@ -33,7 +33,7 @@
         <div class="wrapper">
         <header class="page-header">
             <figure class="logo">
-                <img src="../img/logo.svg"/>
+                <a href="../index.html"><img src="../img/logo.svg"/></a>
             </figure>
             <figure>
                 <i class="fa fa-angle-double-down fa-3x"></i>
@@ -41,15 +41,7 @@
         </header>
 
         <section class="about-aleia">
-                <header>
-                    <figure>
-                        <img src=""/>
-                    </figure>
-                    <figure>
-                        <i></i>
-                    </figure>
-                </header>
-                <div class="title">
+                <div class="title uppercase">
                     <a href="sub-folders/about-aleia.html">
                         <header>
                             <p class="aleia-title-display">About</p>
@@ -59,7 +51,7 @@
                 </div>
             </section>
             <section class="about-dev">
-                <div class="title">
+                <div class="title uppercase">
                     <a href="sub-folders/about-dev.html">
                         <header>
                             <p class="dev-title-display">Aleia</p>
@@ -99,7 +91,7 @@
                     </li>
                 </ul>
             </footer>
-</div>
+        </div>
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
