--- a/march-update/about/sub-folders/about-aleia.html
+++ b/march-update/about/sub-folders/about-aleia.html
@@ -27,7 +27,7 @@
     <div class="wrapper">
         <header class="page-header">
             <figure class="logo">
-                <img src="../../img/logo.svg"/>
+                <a href="../../index.html"><img src="../../img/logo.svg"/></a>
             </figure>
             <figure>
                 <i class="fa fa-angle-double-down fa-3x"></i>
@@ -59,18 +59,16 @@
 	        </p>
 	        </div>
 	        <div class="about-me-copy">
-	    	<div class="spacer-b"></div>
-
-			<aside class="likes-container">
-				<p class="likes-para">
-					You can find me... <span class="likes">reading books about design and development. </span><span class="likes">trying new restaurants. </span><span class="likes">writing things about design, development, and getting started in the tech industry. </span><span class="likes">finding tea shops. </span><span class="likes">building mastermind groups for individuals looking to make things happen. </span><span class="likes">reggae + dancehall musics. </span><span class="likes">finding size 6 wide calf boots. </span><span class="likes">living in walkable cities.</span>
-				</p>
-			</aside> 
-
-			<div class="home">
-		        <p class="aleia-link"><a href="aleia-dev.html">to Aleia + Dev</a></p>
-		    </div>
-		</div>
+		    	<div class="spacer-b"></div>
+				<aside class="likes-container">
+					<p class="likes-para">
+						You can find me... <span class="likes">reading books about design and development. </span><span class="likes">trying new restaurants. </span><span class="likes">writing things about design, development, and getting started in the tech industry. </span><span class="likes">finding tea shops. </span><span class="likes">building mastermind groups for individuals looking to make things happen. </span><span class="likes">reggae + dancehall musics. </span><span class="likes">finding size 6 wide calf boots. </span><span class="likes">living in walkable cities.</span>
+					</p>
+				</aside> 
+				<div>
+			        <p class="aleia-link"><a href="aleia-dev.html">to Aleia + Dev</a></p>
+			    </div>
+			</div>
 		</section>
 		<footer>
             <div class="footer-copy">
