--- a/march-update/index.html
+++ b/march-update/index.html
@@ -54,7 +54,7 @@
                     <div class="hire-me">
                         <p class="hire-copy">Looking to start a new project</p>
                             <button>
-                                <p>Hire Me</p>
+                                <a href="packages/packages.html"><p>Hire Me</p></a>
                             </button>
                     </div>
                     <div class="hire-me">
