--- a/march-update/portfolio/portfolio.html
+++ b/march-update/portfolio/portfolio.html
@@ -27,56 +27,51 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <section class="hero">
-        <header>
-            <figure>
-                <img src=""/>
-            </figure>
-            <figure>
-                <i></i>
-            </figure>
-        </header>
-            <p><span class="bold">Hi.</span>My name is</p>
-            <h1>Aleia Walker</h1>
-            <p>ui/ux designer + frontend developer</p>
-        </section>
+        <div class="wrapper">
+            <header class="page-header">
+                <figure class="logo">
+                    <a href="../index.html"><img src="../img/logo.svg"/></a>
+                </figure>
+                <figure>
+                    <i class="fa fa-angle-double-down fa-3x"></i>
+                </figure>
+            </header>
+        
         <section class="main">
             
         </section>
         <footer>
             <div class="footer-copy">
-                <div>
-                    <p>Aleia elsewhere on the web</p>
-                </div>
+                <p class="hairline footer-tag">Aleia elsewhere on the web</p>
                 <ul class="social">
-                    <li id="twitter">
+                    <li>
                         <a href="http://twitter.com/msaleia">
-                                <i class="fa fa-twitter fa-2x" alt="twitter icon" title='Follow me on Twitter.'></i>
-                         </a>
+                            <i class="fa fa-twitter fa-lg" alt="twitter icon"></i>
+                        </a>
                     </li>
-                    <li id="github">
+                    <li>
                         <a href="http://github.com/msaleia">
-                            <i class="fa fa-github-alt fa-2x" alt="GitHub icon" title='Review my code!'></i>
+                            <i class="fa fa-github-alt fa-lg" alt="GitHub icon"></i>
                         </a>
                     </li>
-                    <li id="linkedin">
+                    <li>
                         <a href="http://linkedin.com/in/aleiawalker">
-                            <i class="fa fa-linkedin fa-2x" alt="linkedin icon" title='Add me on LinkedIn.'></i>
-                            </a>
-                    </li>
-                    <li id="behance">
-                        <a href="http://behance.net/aleiawalker">
-                            <i class="fa fa-github-alt fa-2x" alt="GitHub icon" title='Review my code!'></i>
+                            <i class="fa fa-linkedin fa-lg" alt="linkedin icon"></i>
                         </a>
                     </li>
-                    <li id="email">
+                    <li>
+                        <a href="http://behance.net/aleiawalker">
+                            <i class="fa fa-behance fa-lg" alt="Behance icon"></i>
+                        </a>
+                    </li>
+                    <li>
                         <a href="mailto:aleia@aleiawalker.com">
-                            <i class="fa fa-envelope fa-2x" alt="email icon" title='Send me an email about your next project or position!'></i>
+                            <i class="fa fa-envelope fa-lg" alt="email icon"></i>
                         </a>
                     </li>
                 </ul>
-            </div>
-        </footer>
+            </footer>
+        </div>
 
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
