--- a/march-update/about/sub-folders/aleia-dev.html
+++ b/march-update/about/sub-folders/aleia-dev.html
@@ -7,76 +7,122 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="apple-touch-icon" href="../apple-touch-icon.png">
+        <link rel="stylesheet" type="text/css" href="fonts/MyFontsWebfontsKit/MyFontsWebfontsKit.css">
+        <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Playfair+Display:400,700' rel='stylesheet' type='text/css'>
+
         <!-- Place favicon.ico in the root directory -->
-        <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Montserrat:400,700|Roboto+Condensed:400,300' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="../css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <link rel="icon" href="../../favicon.ico">
+
+        <link rel="stylesheet" href="../../css/normalize.css">
+        <link rel="stylesheet" href="../../css/main.css">
+        <link rel="stylesheet" href="../../css/font-awesome.css">
+        <link rel="stylesheet" href="../../css/font-awesome.min.css">
+        <script src="../../js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
-    <body class="main">
+    <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
-    <section class="container">
-                <div class="about-me-copy">
-        <header class="intro">
-            Aleia's Dev Story
-        </header>
-        <div class="portfolio">
-            <div class="spacer-a"></div>
-                <p class="tagline">I design mobile first.</p>
-            <div class="spacer-a"></div>
+        <div class="wrapper">
+            <header class="page-header">
+                <figure class="logo">
+                    <a href="../../index.html"><img src="../../img/logo.svg"/></a>
+                </figure>
                 <figure>
-                    <a href="http://aleiawalker.com"><img class="figure-single" src="../img/mobile-mockup.png"/></a>
+                    <i class="fa fa-angle-double-down fa-3x"></i>
                 </figure>
+            </header>
+            <section class="subpage-container">
+                <div class="about-me-copy">
+                    <header class="aleia-intro">
+                        Aleia's Dev Story
+                    </header>
+                    <div class="portfolio">
+                        <div class="spacer-a"></div>
+                        <p class="dev-tagline">I design mobile first.</p>
+                        <div class="spacer-a"></div>
+                            <figure>
+                                <a href="http://aleiawalker.com"><img class="figure-single" src="../../img/mobile-mockup.png"/></a>
+                            </figure>
+                        </div>
+                        <div class="flexbox">
+                            <div class="spacer-a"></div>
+                            <p class="flex-copy">
+                                I build things for other people to see. I am intensely in love with pixel perfection and center alignment, so I'm best friends with flexbox.
+                            </p>
+                            <div class="spacer-a"></div>
+                            <aside class="duo">
+                                <figure class="figure-duo">
+                                    <a href="https://github.com/MsAleia/portfolio/tree/master/portfolio/flexbox"><img src="../../img/sublime.png"></a>
+                                </figure>
+                                <figure class="figure-duo">
+                                    <a href="http://aleiawalker.com/portfolio/flexbox/index.html"><img src="../../img/flexbox.png"></a>
+                                </figure>
+                            </aside>
+                        </div>
+                        <div class="goals">
+                        <div class="spacer-a"></div>
+                        <p class="flex-copy">
+                            When I'm not playing with CSS3 tricks I'm freelancing as a frontend developer and designer. I'm building <a href="http://workingtobeawesome.com" alt="">Working to be Awesome</a>, a directory of independent online courses. And I'm of course looking for an awesome team to join.
+                        </p>
+                        <div class="spacer-a"></div>
+                        <figure class="figure-single">
+                            <a href="workingtobeawesome.com"><img src="../../img/wtba.png"></a>
+                        </figure>
+                    </div>
+                    <div class="interested">
+                        <div class="spacer-a"></div>
+                        <p class="flex-copy">
+                            If I still have your attention, I'd love you to take a look at my portfolio and code samples. And it's really easy to get in contact with me via <a href="mailto:aleia@aleiawalker.com">email</a> or <a href="tel:+12026810461">phone</a>. I look forward to hearing from you!
+                        </p>
+                        <div class="spacer-a"></div>
+                        <aside class="duo">
+                            <figure class="figure-duo">
+                                <a href="http://aleiawalker.com" alt="portfolio mockup and link to portfolio site"><img src="../../img/desktop-mockup.png"></a>
+                            </figure>
+                            <figure class="figure-duo">
+                                <a href="https://github.com/msaleia" alt="link to github repos"><img src="../../img/iterm.png"></a>
+                            </figure>
+                        </aside>
+                    </div>
+                <div>
+                    <p class="aleia-link"><a href="about-aleia.html">to About Aleia</a></p>
+                </div>
             </div>
-        <div class="flexbox">
-            <div class="spacer-a"></div>
-                <p>
-                    I build things for other people to see. I am intensely in love with pixel perfection and center alignment, so I'm best friends with flexbox.
-                </p>
-            <div class="spacer-a"></div>
-            <aside>
-                <figure class="figure-duo">
-                    <a href="https://github.com/MsAleia/portfolio/tree/master/portfolio/flexbox"><img src="../img/sublime.png"></a>
-                </figure>
-                <figure class="figure-duo">
-                    <a href="http://aleiawalker.com/portfolio/flexbox/index.html"><img src="../img/flexbox.png"></a>
-                </figure>
-            </aside>
-        </div>
-        <div class="goals">
-            <div class="spacer-a"></div>
-                <p>
-                    When I'm not playing with CSS3 tricks I'm freelancing as a frontend developer and designer. I'm building <a href="http://workingtobeawesome.com" alt="">Working to be Awesome</a>, a directory of independent online courses. And I'm of course looking for an awesome team to join.
-                </p>
-            <div class="spacer-a"></div>
-            <figure class="figure-single">
-                <a href="workingtobeawesome.com"><img src="../img/wtba.png"></a>
-            </figure>
-        </div>
-        <div class="interested">
-            <div class="spacer-a"></div>
-                <p>
-                    If I still have your attention, I'd love you to take a look at my portfolio and code samples. And it's really easy to get in contact with me via <a href="mailto:aleia@aleiawalker.com">email</a> or <a href="tel:+12026810461">phone</a>. I look forward to hearing from you!
-                </p>
-            <div class="spacer-a"></div>
-            <aside>
-                <figure class="figure-duo">
-                    <a href="http://aleiawalker.com" alt="portfolio mockup and link to portfolio site"><img src="../img/desktop-mockup.png"></a>
-                </figure>
-                <figure class="figure-duo">
-                    <a href="https://github.com/msaleia" alt="link to github repos"><img src="../img/iterm.png"></a>
-                </figure>
-            </aside>
-        </div>
-</div>
-        <div class="home about-me-copy">
-            <p><a href="../index.html">Back</a></p>
-        </div>
-    </section>
+            </section>
+            <footer>
+                <div class="footer-copy">
+                    <p class="hairline footer-tag">Aleia elsewhere on the web</p>
+                    <ul class="social">
+                        <li>
+                            <a href="http://twitter.com/msaleia">
+                                <i class="fa fa-twitter fa-lg" alt="twitter icon"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://github.com/msaleia">
+                                <i class="fa fa-github-alt fa-lg" alt="GitHub icon"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://linkedin.com/in/aleiawalker">
+                                <i class="fa fa-linkedin fa-lg" alt="linkedin icon"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://behance.net/aleiawalker">
+                                <i class="fa fa-behance fa-lg" alt="Behance icon"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="mailto:aleia@aleiawalker.com">
+                                <i class="fa fa-envelope fa-lg" alt="email icon"></i>
+                            </a>
+                        </li>
+                    </ul>
+            </footer>
+    </div>
 
 
 
