--- a/march-update/packages/packages.html
+++ b/march-update/packages/packages.html
@@ -11,15 +11,18 @@
     
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
-        <link rel="icon" href="favicon.ico">
+        <link rel="apple-touch-icon" href="../apple-touch-icon.png">
+        <link rel="stylesheet" type="text/css" href="../fonts/MyFontsWebfontsKit/MyFontsWebfontsKit.css">
+        <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Playfair+Display:400,700' rel='stylesheet' type='text/css'>
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-            <link rel="stylesheet" href="css/font-awesome.css">
-        <link rel="stylesheet" href="css/font-awesome.min.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <!-- Place favicon.ico in the root directory -->
+        <link rel="icon" href="../favicon.ico">
+
+        <link rel="stylesheet" href="../css/normalize.css">
+        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/font-awesome.css">
+        <link rel="stylesheet" href="../css/font-awesome.min.css">
+        <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -27,137 +30,148 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <section class="hero">
-            <header>
-                <figure>
-                    <img src=""/>
+        <div class="wrapper">
+            <header class="page-header">
+                <figure class="logo">
+                    <a href="../index.html"><img src="../img/logo.svg"/></a>
                 </figure>
                 <figure>
-                    <i></i>
+                    <i class="fa fa-angle-double-down fa-3x"></i>
                 </figure>
             </header>
-            <div>
-                <header>
-                    <h1>Packages</h1>
-                </header>
-                <p>
-                    You need to control your web presence and I want to make it easier for you to do that. If you see something you like, drop me a note. If you don’t, drop me a note and I can work with you to create a custom package. 
-                </p>
+            <section class="packages-main">
+                <div class="packages-wrapper">
+                    <div class="packages-header-wrapper">
+                        <header class="packages-header">
+                            <h1 class="packages-intro uppercase">Packages</h1>
+                            <div class="spacer-a small-spacer"></div>
+                        </header>
+                        <p>
+                            You need to control your web presence and I want to make it easier for you to do that. If you see something you like, drop me a note. If you don’t, drop me a note and I can work with you to create a custom package. 
+                        </p>
+                    </div>
+                    <article class="card"> <!-- Top Package -->
+                        <div class="card-background">
+                            <div class="card-title">
+                                <header class="card-title-copy">    
+                                    Opulence
+                                </header>
+                            </div>
+                            <div class="card-copy">
+                                <header>
+                                    <p class="card-tags">
+                                        ux/ui design, development, third-party integrations, hosting
+                                    </p>
+                                </header>
+                                <p class="card-description">
+                                    This package is for the individual or small business establishing (or reinvent) their web presence. It is the most comprehensive package and includes fully-repsonsive design, user research, and coding from the ground up.
+                                </p>
+                                <div class="cost">
+                                    Starting at $1249
+                                </div>  
+                            </div>
+                        </div>
+                    </article>
+                    <article class="card"> <!-- Top-1 Package -->
+                        <div class="card-background">
+                            <div class="card-title">
+                                <header class="card-title-copy">    
+                                    Portfolio
+                                </header>
+                            </div>
+                            <div class="card-copy">
+                                <header>
+                                    <p class="card-tags">
+                                        ux/ui design, development, hosting
+                                    </p>
+                                </header>
+                                <p class="card-description">
+                                    Portfolio is a package for artists and others establishing a center for their brand on the web but without all of the bells and whistles. Together, we would go through the same process described here and create your responsive portfolio site.  
+                                </p>
+                                <div class="cost">
+                                    Starting at $749
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="card"> <!-- Top-2 Package -->
+                        <div class="card-background">
+                            <div class="card-title">
+                                <header class="card-title-copy">    
+                                    Designers Only
+                                </header>
+                            </div>
+                            <div class="card-copy">
+                                <header>
+                                    <p class="card-tags">
+                                        development, third-party integrations
+                                    </p>
+                                </header>
+                                <p class="card-description">
+                                    Not all designers code. And that’s great (and where I come in). Hand over your pixel-perfect designs and I will work with you to translate those designs to the web. 
+                                </p>
+                                <div class="cost">
+                                    Starting at $499
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="card"> <!-- Intro Package -->
+                        <div class="card-background">
+                            <div class="card-title">
+                                <header class="card-title-copy">    
+                                    Quick + Dirty
+                                </header>
+                            </div>
+                            <div class="card-copy">
+                                <header>
+                                    <p class="card-tags">
+                                        web design, development, hosting
+                                    </p>
+                                </header>
+                            <p class="card-description">
+                                If you need a simple landing page to house all your details on the world wide web (social media, online hosted portfolios, article links, etc.) this is the perfect place for you to get started. 
+                            </p>
+                            <div class="cost">
+                                Starting at $99
+                            </div>
+                        </div>
+                        </div>
+                </article>
             </div>
-        </section>
-        <section class="main">
-            <article class="card"> <!-- Top Package -->
-                <div class="card-background">
-                    <div class="card-title">
-                        <header class="card-title-copy">    Opulence
-                        </header>
-                    </div>
-                    <header>
-                        <p class="card-tags">
-                            ux/ui design, development, third-party integrations, hosting
-                        </p>
-                    </header>
-                    <div class="card-copy">
-                        This package is for the individual or small business establishing (or reinvent) their web presence. It is the most comprehensive package and includes fully-repsonsive design, user research, and coding from the ground up.  
-                    </div>
-                    <div class="cost">
-                        Starting at $1249
-                    </div>
-                </div>
-            </article>
-            <article class="card"> <!-- Top-1 Package -->
-                <div class="card-background">
-                    <div class="card-title">
-                        <header class="card-title-copy">    Portfolio
-                        </header>
-                    </div>
-                    <header>
-                        <p class="card-tags">
-                            ux/ui design, development, hosting
-                        </p>
-                    </header>
-                    <div class="card-copy">
-                        Portfolio is a package for artists and others establishing a center for their brand on the web but without all of the bells and whistles. Together, we would go through the same process described here and create your responsive portfolio site.  
-                    </div>
-                    <div class="cost">
-                        Starting at $749
-                    </div>
-                </div>
-            </article>
-            <article class="card"> <!-- Top-2 Package -->
-                <div class="card-background">
-                    <div class="card-title">
-                        <header class="card-title-copy">    Designers Only
-                        </header>
-                    </div>
-                    <header>
-                        <p class="card-tags">
-                            development, third-party integrations
-                        </p>
-                    </header>
-                    <div class="card-copy">
-                        Not all designers code. And that’s great (and where I come in). Hand over your pixel-perfect designs and I will work with you to translate those designs to the web. 
-                    </div>
-                    <div class="cost">
-                        Starting at $499
-                    </div>
-                </div>
-            </article>
-            <article class="card"> <!-- Intro Package -->
-                <div class="card-background">
-                    <div class="card-title">
-                        <header class="card-title-copy">    Quick + Dirty
-                        </header>
-                    </div>
-                    <header>
-                        <p class="card-tags">
-                            web design, development, hosting
-                        </p>
-                    </header>
-                    <div class="card-copy">
-                        If you need a simple landing page to house all your details on the world wide web (social media, online hosted portfolios, article links, etc.) this is the perfect place for you to get started. 
-                    </div>
-                    <div class="cost">
-                        Starting at $99
-                    </div>
-                </div>
-            </article>
         </section>    
-        <footer>
-            <div class="footer-copy">
-                <div>
-                    <p>Aleia elsewhere on the web</p>
-                </div>
-                <ul class="social">
-                    <li id="twitter">
-                        <a href="http://twitter.com/msaleia">
-                            <i class="fa fa-twitter fa-2x" alt="twitter icon" title='Follow me on Twitter.'></i>
-                        </a>
-                    </li>
-                    <li id="github">
-                        <a href="http://github.com/msaleia">
-                            <i class="fa fa-github-alt fa-2x" alt="GitHub icon" title='Review my code!'></i>
-                        </a>
-                    </li>
-                    <li id="linkedin">
-                        <a href="http://linkedin.com/in/aleiawalker">
-                            <i class="fa fa-linkedin fa-2x" alt="linkedin icon" title='Add me on LinkedIn.'></i>
-                        </a>
-                    </li>
-                    <li id="behance">
-                        <a href="http://behance.net/aleiawalker">
-                            <i class="fa fa-github-alt fa-2x" alt="GitHub icon" title='Review my code!'></i>
-                        </a>
-                    </li>
-                    <li id="email">
-                        <a href="mailto:aleia@aleiawalker.com">
-                            <i class="fa fa-envelope fa-2x" alt="email icon" title='Send me an email about your next project or position!'></i>
-                        </a>
-                    </li>
-                </ul>
+                <footer>
+                <div class="footer-copy">
+                    <p class="hairline footer-tag">Aleia elsewhere on the web</p>
+                    <ul class="social">
+                        <li>
+                            <a href="http://twitter.com/msaleia">
+                                <i class="fa fa-twitter fa-lg" alt="twitter icon"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://github.com/msaleia">
+                                <i class="fa fa-github-alt fa-lg" alt="GitHub icon"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://linkedin.com/in/aleiawalker">
+                                <i class="fa fa-linkedin fa-lg" alt="linkedin icon"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://behance.net/aleiawalker">
+                                <i class="fa fa-behance fa-lg" alt="Behance icon"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="mailto:aleia@aleiawalker.com">
+                                <i class="fa fa-envelope fa-lg" alt="email icon"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </footer>
             </div>
-        </footer>
-
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
