completed packages and 404 files

--- a/march-update/404.html
+++ b/march-update/404.html
@@ -4,19 +4,58 @@
     <meta charset="utf-8">
     <title>Page Not Found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-    <h1>404</h1>
-    <h3>Go back.</h3>
-    <p>Nothing to see here.</p>
-    <p>Except this pretty green.</p>
 
-    <p>I mean it.</p>
-    <p>Go.</p>
+    <meta name="description" content="Aleia Walker is a frontend web developer and designer based in Atlanta who wants to design and build your website.">
+    <meta name="keywords" content="aleia walker, aleia, freelance writer, writing, web design, web designer, web development, customer support, atlanta, caribbean" >
+    <meta name="author" content="Aleia Walker" >
+    <meta name="twitter:description" content="Aleia Walker is a frontend web developer and designer based in Atlanta. Working everyday to be awesome. And humble.">
     
-    <button>
-        <p>Home</p>
-    </button>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="stylesheet" type="text/css" href="fonts/MyFontsWebfontsKit/MyFontsWebfontsKit.css">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Playfair+Display:400,700' rel='stylesheet' type='text/css'>
+
+    <!-- Place favicon.ico in the root directory -->
+    <link rel="icon" href="favicon.ico">
+
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">        
+    <link rel="stylesheet" href="css/font-awesome.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+</head>
+<body class="not-found">
+    <div class="wrapper">
+        <header class="page-header">
+            <figure class="logo">
+                <img src="img/logo.svg"/>
+            </figure>
+            <figure>
+                <i class="fa fa-angle-double-down fa-3x"></i>
+            </figure>
+        </header>
+    <section class="not-found-main">
+        <div class="not-found-main-wrapper">
+            <div>
+                <h1>404</h1>
+                <h3>Go back.</h3>
+            </div>
+
+            <div>
+                <p>Nothing to see here.</p>
+                <p>Except this pretty green.</p>
+            </div>
+
+            <div class="button-wrapper">
+                <p>I mean it.</p>
+                <p>Go.</p>
+                <button class="not-found-btn">
+                    <p>Home</p>
+                </button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
 <!-- IE needs 512+ bytes: http://blogs.msdn.com/b/ieinternals/archive/2010/08/19/http-error-pages-in-internet-explorer.aspx -->
