--- a/march-update/packages/packages.html
+++ b/march-update/packages/packages.html
@@ -46,11 +46,14 @@
                             <h1 class="packages-intro uppercase">Packages</h1>
                             <div class="spacer-a small-spacer"></div>
                         </header>
-                        <p>
-                            You need to control your web presence and I want to make it easier for you to do that. If you see something you like, drop me a note. If you don’t, drop me a note and I can work with you to create a custom package. 
-                        </p>
+                        <div class="packages-header-description">
+                            <p>
+                                You need to control your web presence and I want to make it easier for you to do that. If you see something you like, drop me a note. If you don’t, drop me a note and I can work with you to create a custom package. 
+                            </p>
+                        </div>
                     </div>
-                    <article class="card"> <!-- Top Package -->
+                    <div class="card-wrapper">
+                    <article class="card top-shotta"> <!-- Top Package -->
                         <div class="card-background">
                             <div class="card-title">
                                 <header class="card-title-copy">    
@@ -116,7 +119,7 @@
                             </div>
                         </div>
                     </article>
-                    <article class="card"> <!-- Intro Package -->
+                    <article class="card entry-package"> <!-- Intro Package -->
                         <div class="card-background">
                             <div class="card-title">
                                 <header class="card-title-copy">    
@@ -138,6 +141,7 @@
                         </div>
                         </div>
                 </article>
+                </div>
             </div>
         </section>    
                 <footer>
