--- a/march-update/process/process.html
+++ b/march-update/process/process.html
@@ -11,15 +11,15 @@
     
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="apple-touch-icon" href="../apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="../favicon.ico">
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-            <link rel="stylesheet" href="css/font-awesome.css">
-        <link rel="stylesheet" href="css/font-awesome.min.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <link rel="stylesheet" href="../css/normalize.css">
+        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/font-awesome.css">
+        <link rel="stylesheet" href="../css/font-awesome.min.css">
+        <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -27,22 +27,24 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <section class="hero">
-            <header>
-                <figure>
-                    <img src=""/>
+        <div class="wrapper">
+            <header class="page-header">
+                <figure class="logo">
+                    <a href="../index.html"><img src="../img/logo.svg"/></a>
                 </figure>
                 <figure>
-                    <i></i>
+                    <i class="fa fa-angle-double-down fa-3x"></i>
                 </figure>
             </header>
-        </section>
-        <section class="main">
-            <div>
-                <header>
-                    <h1>Process</h1>
-                </header>
-            </div>
+            <section class="packages-main process-main">
+                <div class="packages-wrapper process-wrapper">
+                    <div class="packages-header-wrapper process-header-wrapper">
+                        <header class="packages-header process-header">
+                            <h1 class="packages-intro process-intro uppercase">Process</h1>
+                            <div class="spacer-a small-spacer"></div>
+                        </header>
+                    </div>
+
             <article class="phase"> <!-- Phase 0 -->
                 <header class="phase-number">
                     Phase 0
@@ -90,38 +92,36 @@
         </section>
         <footer>
             <div class="footer-copy">
-                <div>
-                    <p>Aleia elsewhere on the web</p>
-                </div>
+                <p class="hairline footer-tag">Aleia elsewhere on the web</p>
                 <ul class="social">
-                    <li id="twitter">
+                    <li>
                         <a href="http://twitter.com/msaleia">
-                                <i class="fa fa-twitter fa-2x" alt="twitter icon" title='Follow me on Twitter.'></i>
-                         </a>
+                            <i class="fa fa-twitter fa-lg" alt="twitter icon"></i>
+                        </a>
                     </li>
-                    <li id="github">
+                    <li>
                         <a href="http://github.com/msaleia">
-                            <i class="fa fa-github-alt fa-2x" alt="GitHub icon" title='Review my code!'></i>
+                            <i class="fa fa-github-alt fa-lg" alt="GitHub icon"></i>
                         </a>
                     </li>
-                    <li id="linkedin">
+                    <li>
                         <a href="http://linkedin.com/in/aleiawalker">
-                            <i class="fa fa-linkedin fa-2x" alt="linkedin icon" title='Add me on LinkedIn.'></i>
-                            </a>
-                    </li>
-                    <li id="behance">
-                        <a href="http://behance.net/aleiawalker">
-                            <i class="fa fa-github-alt fa-2x" alt="GitHub icon" title='Review my code!'></i>
+                            <i class="fa fa-linkedin fa-lg" alt="linkedin icon"></i>
                         </a>
                     </li>
-                    <li id="email">
+                    <li>
+                        <a href="http://behance.net/aleiawalker">
+                            <i class="fa fa-behance fa-lg" alt="Behance icon"></i>
+                        </a>
+                    </li>
+                    <li>
                         <a href="mailto:aleia@aleiawalker.com">
-                            <i class="fa fa-envelope fa-2x" alt="email icon" title='Send me an email about your next project or position!'></i>
+                            <i class="fa fa-envelope fa-lg" alt="email icon"></i>
                         </a>
                     </li>
                 </ul>
-            </div>
-        </footer>
+            </footer>
+        </div>
 
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
