--- a/march-update/404.html
+++ b/march-update/404.html
@@ -29,7 +29,7 @@
     <div class="wrapper">
         <header class="page-header">
             <figure class="logo">
-                <img src="img/logo.svg"/>
+                <a href="index.html"><img src="img/logo.svg"/></a>
             </figure>
             <figure>
                 <i class="fa fa-angle-double-down fa-3x"></i>
