--- a/march-update/about/sub-folders/about-aleia.html
+++ b/march-update/about/sub-folders/about-aleia.html
@@ -25,14 +25,55 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
     <div class="wrapper">
-        <header class="page-header">
+        <header class="page-header gray-alt">
             <figure class="logo">
-                <a href="../../index.html"><img src="../../img/logo.svg"/></a>
+                <a href="../../index.html"><img src="../../img/logo-dark.svg"/></a>
             </figure>
             <figure>
-                <i class="fa fa-angle-double-down fa-3x"></i>
+                <a id="toggle-nav" href="#"><i class="fa fa-angle-double-down fa-3x"></i></a>
             </figure>
         </header>
+        <section id="menu-main" class="uppercase">
+                <div class="menu-wrapper">
+                    <ul class="menu-active">
+                        <li>
+                            <a href="../../index.html">
+                                Home                                
+                            </a>
+                        </li>
+                        <li class ="spacer"></li>
+                        <li>
+                            <a href="../about.html">
+                                My Story
+                            </a>
+                        </li>
+                        <li class ="spacer"></li>
+                        <li>
+                            <a href="../../packages/packages.html">
+                                Packages
+                            </a>
+                        </li>
+                        <li class ="spacer"></li>
+                        <li>
+                            <a href="../../portfolio/portfolio.html">
+                                Portfolio
+                            </a>
+                        </li>
+                        <li class ="spacer"></li>
+                        <li>
+                            <a href="../../process/process.html">
+                                Process
+                            </a>
+                        </li>
+                        <li class ="spacer"></li>
+                        <li>
+                            <a href="">
+                                Archives
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
 	<section class="subpage-container">
 		<div class="about-me-copy">
 	        <header class="aleia-intro">
@@ -103,11 +144,25 @@
             </footer>
 		</div>
 
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <script>
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+            e.src='https://www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+        </script>
 
-	<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
+        <script>
+        $(document).ready(function() {
+            $('#toggle-nav').click(function() {
+                $('#menu-main').slideToggle("slow");
+                $('.menu-hide').slideDown();
+            });
+        });                
+        </script>
     </body>
 </html>
 
