--- a/march-update/index.html
+++ b/march-update/index.html
@@ -36,9 +36,51 @@
                 <img src="img/logo.svg"/>
             </figure>
             <figure>
-                <i class="fa fa-angle-double-down fa-3x"></i>
+                <a id="toggle-nav" href="#"><i class="fa fa-angle-double-down fa-3x"></i></a>
             </figure>
         </header>
+        <section id="menu-main" class="uppercase">
+                <div class="menu-wrapper">
+                    <ul class="menu-active">
+                        <li>
+                            <a href="#">
+                                Home                                
+                            </a>
+                        </li>
+                        <li class ="spacer"></li>
+                        <li>
+                            <a href="about/about.html">
+                                My Story
+                            </a>
+                        </li>
+                        <li class ="spacer"></li>
+                        <li>
+                            <a href="packages/packages.html">
+                                Packages
+                            </a>
+                        </li>
+                        <li class ="spacer"></li>
+                        <li>
+                            <a href="portfolio/portfolio.html">
+                                Portfolio
+                            </a>
+                        </li>
+                        <li class ="spacer"></li>
+                        <li>
+                            <a href="process/process.html">
+                                Process
+                            </a>
+                        </li>
+                        <li class ="spacer"></li>
+                        <li>
+                            <a href="">
+                                Archives
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <div class="menu-hide">
         <section class="hero">
             <div class="hero-copy-wrapper">
                 <div class="hero-copy">
@@ -78,7 +120,7 @@
             </div>
         </section>
 
-        <footer>
+        <footer class="footer">
             <div class="footer-copy">
                 <p class="hairline footer-tag">Aleia elsewhere on the web</p>
                 <ul class="social">
@@ -109,12 +151,8 @@
                     </li>
                 </ul>
             </footer>
-        </div>
-
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+            </div> <!-- menu hide -->
+        </div> <!-- wrapper div ended -->
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
@@ -124,6 +162,16 @@
             e.src='https://www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+        </script>
+
+        <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
+        <script>
+        $(document).ready(function() {
+            $('#toggle-nav').click(function() {
+                $('#menu-main').slideToggle("slow");
+                $('.menu-hide').slideDown();
+            });
+        });                
         </script>
     </body>
 </html>
