--- a/march-update/process/process.html
+++ b/march-update/process/process.html
@@ -3,13 +3,17 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Aleia Walker</title>
+        <title>Aleia Walker - Process'</title>
         <meta name="description" content="Aleia Walker is a frontend web developer and designer based in Atlanta who wants to design and build your website.">
         <meta name="keywords" content="aleia walker, aleia, freelance writer, writing, web design, web designer, web development, customer support, atlanta, caribbean" >
         <meta name="author" content="Aleia Walker" >
         <meta name="twitter:description" content="Aleia Walker is a frontend web developer and designer based in Atlanta. Working everyday to be awesome. And humble.">
     
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link rel="apple-touch-icon" href="../apple-touch-icon.png">
+        <link rel="stylesheet" type="text/css" href="../fonts/MyFontsWebfontsKit/MyFontsWebfontsKit.css">
+        <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Playfair+Display:400,700' rel='stylesheet' type='text/css'>
 
         <link rel="apple-touch-icon" href="../apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
@@ -28,14 +32,55 @@
 
         <!-- Add your site or application content here -->
         <div class="wrapper">
-            <header class="page-header">
+            <header class="page-header gray-alt">
                 <figure class="logo">
-                    <a href="../index.html"><img src="../img/logo.svg"/></a>
+                    <a href="../index.html"><img src="../img/logo-dark.svg"/></a>
                 </figure>
                 <figure>
-                    <i class="fa fa-angle-double-down fa-3x"></i>
+                    <a id="toggle-nav" href="#"><i class="fa fa-angle-double-down fa-3x"></i></a>
                 </figure>
             </header>
+        <section id="menu-main" class="uppercase">
+                <div class="menu-wrapper">
+                    <ul class="menu-active">
+                        <li>
+                            <a href="../index.html">
+                                Home                                
+                            </a>
+                        </li>
+                        <li class ="spacer"></li>
+                        <li>
+                            <a href="../about/about.html">
+                                My Story
+                            </a>
+                        </li>
+                        <li class ="spacer"></li>
+                        <li>
+                            <a href="../packages/packages.html">
+                                Packages
+                            </a>
+                        </li>
+                        <li class ="spacer"></li>
+                        <li>
+                            <a href="portfolio.html">
+                                Portfolio
+                            </a>
+                        </li>
+                        <li class ="spacer"></li>
+                        <li>
+                            <a href="../process/process.html">
+                                Process
+                            </a>
+                        </li>
+                        <li class ="spacer"></li>
+                        <li>
+                            <a href="">
+                                Archives
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
             <section class="packages-main process-main">
                 <div class="packages-wrapper process-wrapper">
                     <div class="packages-header-wrapper process-header-wrapper">
@@ -124,11 +169,6 @@
         </div>
 
 
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
@@ -137,6 +177,16 @@
             e.src='https://www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+        </script>
+
+        <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
+        <script>
+        $(document).ready(function() {
+            $('#toggle-nav').click(function() {
+                $('#menu-main').slideToggle("slow");
+                $('.menu-hide').slideDown();
+            });
+        });                
         </script>
     </body>
 </html>
