completed work on portfolio section

--- a/march-update/about/about.html
+++ b/march-update/about/about.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="">
     <head>
+
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Aleia Walker</title>
@@ -93,12 +94,15 @@
             </section>
             <section class="about-dev">
                 <div class="title uppercase">
-                    <a href="sub-folders/about-dev.html">
+                    <a href="sub-folders/aleia-dev.html">
                         <header>
                             <p class="dev-title-display">Aleia</p>
                             <p class="title-sans">+ Dev</p>
                         </header>
                     </a>
+                    <p>
+
+                    </p>
                 </div>
             </section>
             <footer>
