--- a/march-update/portfolio/portfolio.html
+++ b/march-update/portfolio/portfolio.html
@@ -16,13 +16,22 @@
         <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Playfair+Display:400,700' rel='stylesheet' type='text/css'>
 
         <!-- Place favicon.ico in the root directory -->
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="../favicon.ico">
 
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/main.css">
         <link rel="stylesheet" href="../css/font-awesome.css">
         <link rel="stylesheet" href="../css/font-awesome.min.css">
         <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
+        
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+
+
+        <script>
+              $(function() {
+                $( "#accordion" ).accordion();
+              });
+        </script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -82,7 +91,7 @@
         </section>
         <div class="menu-hide">
         <section class="main portfolio-main">
-            <div class="portfolio-wrapper">
+            <div id="accordion" class="portfolio-wrapper">
                 <article class="portfolio-item"> <!-- ITEM #1 -->
                     <div class="portfolio-header">
                         <header>
@@ -95,12 +104,12 @@
                         </header>
                     </div>
                     <div class="portfolio-content">
-                        <div class="content-title">
+                       <!--  <div class="content-title">
                             Working to be Awesome
-                        </div>
+                        </div> -->
                         <div class="content">
                             <figure>
-                                <a href=""><img src=""></a>
+                                <a href="http://workingtobeawesome.com"><img src="../img/wtba-logo.svg"></a>
                             </figure>
                             <div>
                                 <p class="content-description">
@@ -122,12 +131,12 @@
                         </header>
                     </div>
                     <div class="portfolio-content">
-                        <div class="content-title">
+                        <!-- <div class="content-title">
                             Loud Vibes
-                        </div>
+                        </div> -->
                         <div class="content">
                             <figure>
-                                <a href=""><img src=""></a>
+                                <a href=""><img src="../img/loud-vibes.svg"></a>
                             </figure>
                             <div>
                                 <p class="content-description">
@@ -135,10 +144,10 @@
                                 </p>
 
                                 <p class="content-description">
-                                    I started by creating user personas for Loud Vibes target users. The target users are true fans of reggae and dancehall and use it as their outlet from their very hectic lives. This led me to pay more attention to the mobile experience. I designed mobile first and adjusted the layout to the devices using progressive enhancement. I relied on the user flows to develop a sitemap that made it simple for users to complete vital tasks. After testing my site, I adjusted the layout to create the best design solution for Loud Vibes users.
+                                    I started by creating user personas for Loud Vibes target users. The target users are true fans of reggae and dancehall and use it as their outlet from their very hectic lives. This led me to pay more attention to the mobile experience. 
                                 </p>
 
-c
+                                <p class="content-description">
                                     This is the first project I created a style tile for instead of a mood board and I am really excited about how functional they are when it is time to code. All of my design elements are available here.
                                 </p>
                             </div>
@@ -161,9 +170,9 @@ c
                             Are You Lost?
                         </div>
                         <div class="content">
-                            <figure>
+                            <!-- <figure>
                                 <a href=""><img src=""></a>
-                            </figure>
+                            </figure> -->
                             <div>
                                 <p class="content-description">
                                     This quick and dirty class project was created to gain experience with geolocation in the browser via jQuery. Checkout the code here.
@@ -189,12 +198,12 @@ c
                     </div>
                     <div class="portfolio-content">
                         <div class="content-title">
-                            Bio Page
+                            Example Bio Page
                         </div>
                         <div class="content">
-                            <figure>
+                            <!-- <figure>
                                 <a href=""><img src=""></a>
-                            </figure>
+                            </figure> -->
                             <div>
                                 <p class="content-description">
                                     Flexbox, what can I say about this gift to HTML5? I used it to create a clean layout for a single-page portfolio site. The way all of the elements in the tri-columns are perfectly centered suits my OCD-tendencies quite well. I also included Font Awesome icons for my social because of their ease of use. Code here.
@@ -215,19 +224,16 @@ c
                         </header>
                     </div>
                     <div class="portfolio-content">
-                        <div class="content-title">
-                            aleiawalker.com 1.5
-                        </div>
+                        <!-- <div class="content-title">
+                            Aleiawalker.com V1.3 
+                        </div> -->
                         <div class="content">
                             <figure>
-                                <a href=""><img src=""></a>
+                                <a href=""><img src="../img/aleia-logo-orig.svg"></a>
                             </figure>
                             <div>
                                 <p class="content-description">
-                                    This is the third stylistic iteration of a site which started as a capstone project for a web design course. I started by building out the user personas and found the target user to be hiring managers with short amounts of time to dedicate to prospective employee portfolios. That is why I concentrated on a single page layout so that everything was immediately accessible to the user. After the user personas I built out user flows, sitemaps, and wireframes—all codependent on one another. I created all of the design elements (logo, logo mark, and signature) and incorporated them into my mockup. The site was not designed mobile first but I will be redesigning it to value the mobile experience.
-                                </p>
-                                <p class="content-description">
-                                    In my mobile-first redesign, I plan to convert the HTML to HTML5, the CSS to SASS, and use Flexbox to stabilize the layout. I will also use the jQuery flyout menu that I created for the mobile version to incorporate a hidden menu into my new design. Please check out some of the previous versions ongithub.
+                                    This is the third stylistic iteration of a site which started as a capstone project for a web design course. I started by building out the user personas and found the target user to be hiring managers with short amounts of time to dedicate to prospective employee portfolios. I concentrated on a single page layout so that everything was immediately accessible to the user. After the user personas I built out user flows, sitemaps, and wireframes—all codependent on one another. I created all of the design elements (logo, logo mark, and signature) and incorporated them into my mockup. Please versions available on github.
                                 </p>
                             </div>
                         </div>
@@ -246,12 +252,12 @@ c
                     </div>
                     <div class="portfolio-content">
                         <div class="content-title">
-                            Working to be Awesome
+                            Currently Accepting Clients
                         </div>
                         <div class="content">
-                            <figure>
+                            <!-- <figure>
                                 <a href=""><img src=""></a>
-                            </figure>
+                            </figure> -->
                             <div>
                                 <p class="content-description">
                                     Do you want to be here? Take a look at <a href="../packages/packages.html">these.</a>
@@ -306,7 +312,10 @@ c
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
         </script>
 
-        <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
+
+        <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.js"></script>
+        <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
         <script>
         $(document).ready(function() {
             $('#toggle-nav').click(function() {
@@ -315,22 +324,19 @@ c
             });
         });                
         </script>
-        </div>
+        <script type="text/javascript">
+          $(document).ready(function($) {
+            $('#accordion').find('.portfolio-header').click(function(){
 
+              //Expand or collapse this panel
+              $(this).next().slideToggle('fast');
 
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+              //Hide the other panels
+              $(".portfolio-content").not($(this).next()).slideUp('fast');
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+            });
+          });
         </script>
+        </div>
     </body>
 </html>
