fixed broken link for homepage

--- a/march-update/portfolio/portfolio.html
+++ b/march-update/portfolio/portfolio.html
@@ -52,7 +52,7 @@
             <div class="menu-wrapper">
                 <ul class="menu-active">
                     <li>
-                        <a href="#">
+                        <a href="../index.html">
                             Home                                
                         </a>
                     </li>
