updated link on portfolio page for loud vibes

--- a/march-update/portfolio/portfolio.html
+++ b/march-update/portfolio/portfolio.html
@@ -136,7 +136,7 @@
                         </div> -->
                         <div class="content">
                             <figure>
-                                <a href=""><img src="../img/loud-vibes.svg"></a>
+                                <a href="examples/loud-vibes"><img src="../img/loud-vibes.svg"></a>
                             </figure>
                             <div>
                                 <p class="content-description">
