updated package titles and added logo.png

--- a/march-update/packages/packages.html
+++ b/march-update/packages/packages.html
@@ -98,7 +98,7 @@
                         <div class="card-background">
                             <div class="card-title">
                                 <header class="card-title-copy">    
-                                    Opulence
+                                    Grand Package
                                 </header>
                             </div>
                             <div class="card-copy">
@@ -120,7 +120,7 @@
                         <div class="card-background">
                             <div class="card-title">
                                 <header class="card-title-copy">    
-                                    Portfolio
+                                    Portfolio Package
                                 </header>
                             </div>
                             <div class="card-copy">
@@ -142,7 +142,7 @@
                         <div class="card-background">
                             <div class="card-title">
                                 <header class="card-title-copy">    
-                                    Designers Only
+                                    For Designers Only Package
                                 </header>
                             </div>
                             <div class="card-copy">
@@ -164,7 +164,7 @@
                         <div class="card-background">
                             <div class="card-title">
                                 <header class="card-title-copy">    
-                                    Quick + Dirty
+                                    Entry Level Package
                                 </header>
                             </div>
                             <div class="card-copy">
