updated package titles

--- a/march-update/packages/packages.html
+++ b/march-update/packages/packages.html
@@ -98,7 +98,7 @@
                         <div class="card-background">
                             <div class="card-title">
                                 <header class="card-title-copy">    
-                                    Grand Package
+                                    Level Up
                                 </header>
                             </div>
                             <div class="card-copy">
@@ -120,7 +120,7 @@
                         <div class="card-background">
                             <div class="card-title">
                                 <header class="card-title-copy">    
-                                    Portfolio Package
+                                    Portfolio 
                                 </header>
                             </div>
                             <div class="card-copy">
@@ -142,7 +142,7 @@
                         <div class="card-background">
                             <div class="card-title">
                                 <header class="card-title-copy">    
-                                    For Designers Only Package
+                                    Designers Only
                                 </header>
                             </div>
                             <div class="card-copy">
@@ -164,7 +164,7 @@
                         <div class="card-background">
                             <div class="card-title">
                                 <header class="card-title-copy">    
-                                    Entry Level Package
+                                    Entry Level
                                 </header>
                             </div>
                             <div class="card-copy">
